<resources>
    <string name="app_name">AndroidPO</string>

    <string name="array_loop_1">int[] for</string>
    <string name="array_loop_2">int[] foreach</string>
    <string name="array_loop_3">Foo[] for</string>
    <string name="array_loop_4">Foo[] foreach</string>
    <string name="array_loop_5">final Foo[] for</string>
    <string name="array_loop_6">final Foo[] foreach</string>
    <string name="overdraw">Overdraw</string>
    <string name="requestWeather">Request weather</string>
    <string name="download_files">Download files</string>
    <string name="play_music">Play music</string>
    <string name="show_map">Show map</string>
    <string name="footer_text">2012 - NTM</string>
    <string name="monitor_jank_start">开始卡顿监控</string>
    <string name="monitor_jank_stop">停止卡顿监控</string>
    <string name="ok">OK</string>
    
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="detect_network_in_ui_thread">detect Network in UI Thread</string>
</resources>
