<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/array_loop_1"
        style="@style/btn"
        android:text="@string/array_loop_1" />

    <Button
        android:id="@+id/array_loop_2"
        style="@style/btn"
        android:text="@string/array_loop_2" />


    <Button
        android:id="@+id/array_loop_3"
        style="@style/btn"
        android:text="@string/array_loop_3" />

    <Button
        android:id="@+id/array_loop_4"
        style="@style/btn"
        android:text="@string/array_loop_4" />


    <Button
        android:id="@+id/array_loop_5"
        style="@style/btn"
        android:text="@string/array_loop_5" />

    <Button
        android:id="@+id/array_loop_6"
        style="@style/btn"
        android:text="@string/array_loop_6" />
</LinearLayout>